Little fixes + added ENet and started physics module

--- a/Turtle/Turtle.csproj
+++ b/Turtle/Turtle.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Raylib-cs" Version="4.0.0.2" />
+    <PackageReference Include="Aether.Physics2D" Version="1.6.1" PrivateAssets="compile" />
+    <PackageReference Include="ENet-CSharp" Version="2.4.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" PrivateAssets="compile" />
+    <PackageReference Include="Raylib-cs" Version="4.0.0.2" PrivateAssets="compile" />
   </ItemGroup>
 
   <ItemGroup>
